# LLM-Agentic-Demo

./: .env  .gitignore  README.md  apidoc.json  package-lock.json  package.json
agentic_demo_crewai/: README.md  current_json_output.json  display_streamlit.py  geminiAPI_Test.py  graph_agent.py  langgraph_agents.py  main.py  pyproject.toml  sample_http_request_body.json  sample_http_response.json  sample_sales_tech_agents.py  schemas.py  scopingsheet_chatbot.py  sow_generator.py
agentic_demo_crewai/employee_data/: workers.csv
agentic_demo_crewai/expansion_code/: graph_scopingsheet_chatbot.py
agentic_demo_crewai/n8n_nodes/: sow_n8n_connection_nodes.json
bruno_api_endpoints/: bruno.json
client-app/: README.md  aliceBrown_outlook.com_2025-03-31_20-20-03.json  app.py  diansofia03_gmail.com_2025-04-15_21-51-58.json  fluent-stratum-433010-t7-d5618f5c508f.json  john.d_outlook.com_2025-04-12_23-37-29.json  michael.lee_outlook.com_2025-04-14_22-59-52.json  mingying1308_gmail.com_2025-04-15_23-22-34.json  mingying1308_gmail.com_2025-04-15_23-32-31.json  model.py  model_scoping_sheet.py  model_scoping_sheet_final.py  reference_scoping_http_response.json  scoping_questions.json  scoping_sheet.py
docs/: index.html
internal-staff-app/: .env.example  .gitignore  QlikView-Final-Dashboard-Logs.qvf  QlikView-Final-Dashboard.qvf  README.md  index.html  package-lock.json  package.json  presale-dashboard.html  server.js  visualization.html
migrations/: 00_drop_database.sql  02_create_table_clients.sql  03_create_table_project_details.sql  05_create_table_reports.sql  (+3 more)
(+159 files in other folders)
