[project]
name = "agentic-demo-crewai"
version = "0.1.0"
description = ""
authors = [
    {name = "Choon Leng",email = "73415759+ChoonLeng773@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai (>=0.100.1,<0.101.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-core (>=0.3.34,<0.4.0)",
    "langgraph (>=0.2.72,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
